src/test/deca/test_compilateur/context/invalid/created/acces_field/field_protected_super2.deca
// Description :
//    acces à un field protegé, le meme field public existe dans une super class
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 18 :(3.65) L’attribut est protégé

class A{
 protected int x;
}

class B extends A{
}

{
B a = new B();
int b = a.x;
}